Fixed display of some elements on smaller screens

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -13,7 +13,7 @@ Primary Color (Purple): #357b70;
 Secondary Color (Orange): #e0b354;
  */
 
-:root {
+ :root {
 	--primary-color:#357b70 ;
 	--secondary-color: #e0b354;
 	--white: #fff;
@@ -392,15 +392,34 @@ button:focus,
 .cloud-back {
 	-webkit-animation: 34s cloud-move-reverse infinite alternate linear;
 	        animation: 34s cloud-move-reverse infinite alternate linear;
-}.example {
-    display: -ms-grid;
-    display: grid;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
-    background: linear-gradient(to bottom, white, black);
+}
+
+
+
+@media all and (max-width: 677px) {
+	#info div span:nth-child(even) {
+		display: block;
+		text-indent: 0.5em;
+	}
+}
+
+@media all and (max-width: 581px) {
+	#status {
+		margin-left: 17.5em;
+		padding: 0.3em;
+	}
+}
+
+@media all and (max-width: 485px) {
+	#work-status {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+	}
+	#status {
+		margin-left: 0.5em;
+	}
 }
